Revision history for Perl extension DBIx::DataModel.

v2.33 24.03.2013
  - removed old workaround for DBD::Oracle bug 
       https://rt.cpan.org/Ticket/Display.html?id=76410
  - require minimal version 1.45 for DBD::Oracle (which fixed #76410)
  - tmp workaround for new DBD::Oracle bug 
       https://rt.cpan.org/Ticket/Display.html?id=84170

v2.32 19.02.2013
  - do the right thing when SQL::Abstract(array_datatypes => 1)
  - new feature: $schema->autolimit_firstrow(1);

v2.31 08.02.2013
  - Support for DBIx::RetryOverDisconnects in transactions
  - Schema::Generator uses Lingua::EN::Inflect::Phrase; test implemented
    using DBD::SQLite v1.38_01

v2.30 31.08.2012
  - changed check if should return pKey from "exists" to "defined" 
    in _singleInsert

v2.29 18.08.2012
  - fix insert() when primary key is over several columns
  - removed deprecated call to defined(@array)
  - declare POD =encoding so that Pod::Simple is happy

v2.28 03.06.2012
  - fix ->row_count() on UNION/INTERSECT

v2.27 29.05.2012
  - new dependency on Try::Tiny for better evals
  - support for set operators for compound queries (UNION/INTERSECT/etc)

v2.26 05.05.2012
  - automatic composition of handlers when multiple under the same name
  - added TO_JSON method so that the JSON module can happily encode 
    DBIDM data rows

v2.25 21.04.2012
  - skip Oracle tests when DBD::Oracle is not installed

v2.24 20.04.2012
  - fixed a bug with Oracle cursors

v2.23 19.03.2012
  - added support for INSERT .. RETURNING .. INTO .. (used by Oracle)

v2.22 08.03.2012
  - fixed bug in ->update() with nested refs, bug introduced in v2.20

v2.21 29.02.2012
  - fixed bug in $meta_source->tables(), ->associations(), etc.

v2.20 14.02.2012
  - fixed bug on update() in multi-schema mode
  - bulk updates now apply the 'to_DB' handler
todo upd Reference
  - REMOVED AUTOMATIC COMPATIBILITY v1; now needs arg Compatibility => 1.0

v2.10 26.01.2012
  - fixed bug on delete() method, introduced in v2.09
