@@ -1698,11 +1698,12 @@ JDBC methods C<getMemberCount()>, C<absolute()>, C<relative()>, etc.
   $result = $statement->select(
      -columns       => \@columns, 
        # OR : -columns => [-DISTINCT => @columns],
-     -where         => \%where,
+     -where         => \%where_criteria,
        # OR : -fetch => $key,
        # OR : -fetch => \@key,
+     -where_on      => \%where_on_criteria,
      -group_by      => \@groupings,
-     -having        => \%criteria,
+     -having        => \%having_criteria,
      -order_by      => \@order,
      -for           => $purpose,
      -post_SQL      => sub {...},
@@ -1777,14 +1778,13 @@ particular, the list must not always include primary or foreign keys
 updates will obviously fail.
 
 
-=item C<< -where => \%where >> 
+=item C<< -where => \%where_criteria >> 
 
-C<< \%where >> is a reference to a hash or array of 
+C<< \%where_criteria >> is a reference to a hash or array of 
 criteria that will be translated into SQL clauses. In most cases, this
 will just be something like C<< {col1 => 'val1', col2 => 'val2'} >>;
 see L<SQL::Abstract::select|SQL::Abstract/select> for 
- detailed description of the
-structure of that hash or array. It can also be
+a detailed description of the structure of that hash or array. It can also be
 a plain SQL string like C<< "col1 IN (3, 5, 7, 11) OR col2 IS NOT NULL" >>.
 
 
@@ -1831,6 +1831,33 @@ belongs to the given employee.
 
 In presence of C<-fetch>, arguments C<-where> and C<-select_as> are not
 allowed.
+
+=item C<< -where_on => \%where_on_criteria >> 
+
+  $schema->join(qw/Employee => activities => department/)->select(
+    -where => {firstname => 'Hector',
+               dpt_name  => 'Music'},
+    -where_on => {
+       T_Activity   => {d_end => {"<" => '01.01.2001'}},
+       T_Department => {dpt_head => 999},
+     },
+  );
+
+Adds some additional criteria into the 
+C<< JOIN ... ON ... >> SQL statement.
+B<This feature is still experimental>.
+These criteria are expressed as a hashref; keys of that hashref
+are names of database tables participating in the join.
+The criteria will be combined with regular foreign key constraints
+produced by the join; so in the (silly) example above, the generated
+SQL is :
+
+     SELECT * FROM T_Employee 
+       LEFT OUTER JOIN T_Activity
+         ON T_Employee.emp_id = T_Activity.emp_id AND d_end < ?
+       LEFT OUTER JOIN T_Department 
+         ON T_Activity.dpt_id = T_Department.dpt_id AND dpt_head = ?
+       WHERE dpt_name = ? AND firstname = ?
 
 
 =item C<< -group_by => "string" >>  or C<< -group_by => \@array >> 
